# clienttry1

./: README.md  pyproject.toml
src/clienttry1/: __init__.py  __main__.py  client.py  console.py  llm.py
